# speechtotwitch

./: .gitignore  LICENSE  README.md  dict.txt  env.yml  flake.nix  pyproject.toml  shell.nix  stt.py  stt_win.bat
base_logger/: base_logger.py
db/: base.py  blacklist.py  channels.py  dict.py  init.py  keys.py  messages.py  settings.py  whitelist.py
process_message/: process_message.py
stt/: stt.py
tirc/: tirc.py
voice/: voice.py
wgui/: apps.py  wgui.py
wgui/pages/: base_page.py  blacklist_page.py  channels_page.py  dict_page.py  keys_page.py  main_page.py  messages_page.py  not_found_page.py  settings_page.py  whitelist_page.py
